force-app/main/default/objects/Coupons__c/Coupons__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Coupons</label>
</CustomObject>