force-app/main/default/objects/Coupons__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <label>תאריך סיום</label>
    <type>Date</type>
</CustomField>