force-app/main/default/objects/Coupons__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <label>תאריך התחלה</label>
    <type>Date</type>
</CustomField>