force-app/main/default/objects/Coupons__c/listViews/All_coupon.listView-meta.xml
<ListView>
    <fullName>All_coupon</fullName>
    <columns>NAME</columns>
    <columns>Coupon__c</columns>
    <columns>Discount__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Affiliate_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All coupon</label>
    <language>en_US</language>
</ListView>